--- a/style.css
+++ b/style.css
@@ -2,4 +2,87 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
 }
+ /* Centering the navigation links */
+.navbar {
+  text-align: center;
+}
+
+/* Styling the anchor tags within the navbar */
+.navbar a {
+  padding: 10px;
+  background-color: grey; /* You can replace 'grey' with your preferred color */
+  text-decoration: none; /* Remove the default underline */
+  color: white; /* Set the text color to contrast with the background */
+  margin: 0 10px; /* Add some space between the links */
+}
+ 
+  /* Style for the image caption */
+.p {
+  font-size: 14px; /* Adjust the font size to your preference */
+  text-align: center; /* Center the text */
+  margin-top: 10px; /* Optional: Add some space above the caption */
+  color: #333; /* Set the text color to a suitable color */
+}
+/* Style for the #details section */
+#h3 {
+  overflow: hidden; /* Clear the float to contain the floated divs */
+}
+
+/* Style for each div within the #details section */
+#h3 div {
+  float: left; /* Float the divs to the left */
+  margin-right: 25px; /* Optional: Add some space between the divs */
+}
+/* Style for the bottom divs */
+.bottom-div:not(:last-child) {
+  width: 25%; /* Each div occupies 25% of the width */
+  background-color: #ce0e0e; /* Set the background color to your preferred color */
+  text-align: center; /* Center the text within each div */
+  padding: 50px; /* Add padding for better visual appeal */
+  box-sizing: border-box; /* Include padding and border in the total width/height */
+  float: left; /* Float the divs to the left for horizontal arrangement */
+}
+/* Style for paragraphs within #featured-property */
+#featured-property p {
+  width: 800px; /* Set the hard width */
+  margin: 20px auto; /* Center the text and add vertical space */
+  text-align: center; /* Center the text within the paragraphs */
+}
+/* Optional: Add some space between the bottom divs */
+.bottom-div:not(:last-child) {
+  margin-right: 25px;
+  background-color: #ce0e0e;
+}
+
+/* Clear the float to contain the bottom divs */
+#details div::after {
+  content: "";
+ display: table-row;
+  clear: both;
+  background-color: #ce0e0e;
+}
+/* Style for the #details section */
+#h3,p {
+  overflow: hidden; /* Clear the float to contain the floated divs */
+}
+
+/* Style for each div within the #details section */
+#details div {
+  float: left; /* Float the divs to the left */
+  width: 20%; /* Each div occupies 25% of the width */
+  box-sizing: border-box; /* Include padding and border in the total width/height */
+  text-align: center; /* Center the text within each div */
+  padding: 20px; /* Add padding for better visual appeal */
+  text-align: center;
+  background-color: #ce0e0e;
+}
+
+/* Optional: Add some space between the divs */
+#details div:not(:last-child) {
+  margin-left:percentage;
+}
+
+
+  
